# Sanctifier

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LIVE_TESTNET.md  README.md  codecov.yml
.github/workflows/: rust.yml  soroban-deploy.yml  vscode-extension-ci.yml
benchmarks/: static_reentrancy_fp_corpus.md
contracts/allowance-race/: Cargo.toml
contracts/allowance-race/src/: lib.rs
contracts/amm-pool/: .sanctify.toml
contracts/deposit-withdraw/: Cargo.toml  README.md
contracts/deposit-withdraw/src/: lib.rs
contracts/fixtures/finding-codes/: s025_missing_ttl_bump.rs  s026_taint_propagation.rs  s027_static_reentrancy.rs
contracts/kani-poc/: Cargo.toml
contracts/kani-poc/src/: lib.rs
contracts/my-contract/tests/: bolero_fuzz.rs  integration_tests.rs
contracts/reentrancy-guard/: Cargo.toml  README.md
contracts/runtime-guard-wrapper/: Cargo.toml
contracts/runtime-guard-wrapper/src/: lib.rs
contracts/runtime-guard-wrapper/tests/: integration_tests.rs
docs/: allowance-race.md  analysis-profiles.md  frontend-setup.md  getting-started.md  kani-integration.md  rule-authoring-guide.md  runtime-guards-integration.md
docs/rules/: missing-ttl-bump.md  static-reentrancy.md
frontend/: .env.local.example
frontend/app/: globals.css
frontend/app/components/: DashboardHeader.tsx  ThemeToggle.tsx  WorkspaceSidebar.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: env.ts  export-pdf.ts  upload-validation.ts
schemas/: analysis-output.json
specs/: serve-api.yaml
tooling/sanctifier-cli/: Cargo.toml
tooling/sanctifier-core/: Cargo.toml
(+29 files in other folders)
